[tool.poetry]
name = "tectonic"
version = "0.1.0"
authors = ["GSI-Fing-Udelar"]
description = "A Python package for the Tectonic project."
readme = "README.md"
keywords = ["cyberrange", "tectonic", "ansible", "terraform", "aws", "cloud", "security", "automation"]
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL3 License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "tectonic", from = "src" }
]

homepage = "https://cyberrange.fing.edu.uy/"
documentation = "https://readthedocs.org"
repository = "https://github.com/GSI-Fing-Udelar/tectonic.git"

include = ["terraform", "playbooks", "services", "image_generation"]

[tool.poetry.urls]
"Homepage" = "https://cyberrange.fing.edu.uy/"
"Bug Tracker" = "https://github.com/GSI-Fing-Udelar/tectonic/issues"

# Requirements
[tool.poetry.dependencies]
python = ">=3.10,<4.0"
bcrypt = "*"
passlib = "*"
boto3 = "*"
botocore = "*"
certifi = "*"
cffi = "*"
charset-normalizer = "*"
click = "*"
cryptography= "42.0.4"
decorator = "*"
deprecated = "*"
fabric = "*"
idna = "*"
invoke = "*"
jmespath = "*"
"packer.py" = "*"
paramiko = "*"
pycparser = "*"
pynacl = "*"
python-dateutil = "*"
python-terraform = "*"
pyyaml = "*"
requests = "*"
requests-toolbelt = "*"
s3transfer = "*"
six = "*"
urllib3 = "*"
wrapt = "*"
ansible-runner = "*"
ansible = "7.7.0"
libvirt-python = "*"
elasticsearch = "*"
packaging = "*"
prettytable = "*"
beautifulsoup4 = "*"
bs4 = "*"
freezegun = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "*"
pytest-mock = "*"
pytest-env = "*"
fabric = { version = "*", extras = ["pytest"] }
pylint = "*"
black = "*"
moto = { version = "4.2.13", extras = ["ec2"] }
responses = "*"
freezegun = "*"

[tool.semantic_release]
version_variable = "pyproject.toml:version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]

[tool.poetry.scripts]
tectonic = "tectonic.cli:tectonic"
